WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254484
[UI-side compositing] Safari occasionally crashes when scrolling underneath `NSScrollerImpPair`
https://bugs.webkit.org/show_bug.cgi?id=254484
Summary
[UI-side compositing] Safari occasionally crashes when scrolling underneath `...
Wenson Hsieh
Reported
2023-03-26 12:53:57 PDT
rdar://107139674
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-03-26 16:00:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11984
EWS
Comment 2
2023-03-27 21:32:17 PDT
Committed
262194@main
(b2362a5d6b0d): <
https://commits.webkit.org/262194@main
> Reviewed commits have been landed. Closing PR #11984 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug